# BarcodeScanner

./: .gitignore  AbstractDecoder.h  BarcodeDetectorOpenCV.cpp  BarcodeDetectorOpenCV.h  BarcodeDetectorOpenCV2D.cpp  BarcodeDetectorOpenCV2D.h  BarcodeException.h  BarcodeReader.cpp  BarcodeReader.h  BarcodeReader2D.cpp  BarcodeReader2D.h  BarcodeResult.h  CMakeLists.txt  CameraException.h  CameraManager.cpp  Cameramanager.cpp  Cameramanager.h  Country.cpp  Country.h  CurvedBarcodeDetector.cpp  CurvedBarcodeDetector.h  DecodeException.h  FailureAnalysis.cpp  FailureAnalysis.h  FileException.h  ImageBuffer.h  ImagePreprocessor.cpp  ImagePreprocessor.h  Imagemanager.cpp  Imagemanager.h  Manufacturer.cpp  Manufacturer.h  Product.cpp  Product.h  Readme.md  SmartDecoder.cpp  SmartDecoder.h  WebServer.cpp  WebServer.h  barcodeanalyzer.h  (+52 more)
data/: Barcode_All.txt  Barcode_Countries.txt  Barcode_Manufacturers.txt  Barcode_Products.txt
header/: BarcodeDetectorOpenCV.h  BarcodeDetectorOpenCV1D.h  BarcodeDetectorOpenCV2D.h  BarcodeReader.h  BarcodeReader2D.h  BarcodeResult.h  CameraException.h  CameraManager.h  Decoder.h  ImageLoadException.h  ImageManager.h  WebServer.h  ZBarDecoder.h  mainwindow.h
source/: BarcodeDetectorOpenCV.cpp  BarcodeDetectorOpenCV2D.cpp  BarcodeReader.cpp  BarcodeReader2D.cpp  CameraManager.cpp  Country.cpp  CurvedBarcodeDetector.cpp  FailureAnalysis.cpp  ImageManager.cpp  ImagePreprocessor.cpp  Manufacturer.cpp  Product.cpp  WebServer.cpp  ZBarDecoder.cpp  mainwindow.cpp
